Closed Bug 834496 Opened 12 years ago Closed 12 years ago

DASH: Fix for 804372 breaks nestegg_track_seek

Categories

(Core :: Audio/Video, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla21

People

(Reporter: sworkman, Assigned: sworkman)

Details

Attachments

(1 file)

A track_number to track_id mapping was introduced in Bug 804372 for nestegg. The patch did not update nestegg_track_seek (similar to Bug 832018), so the WebM files with track numbers other than 1 do not work in DASH. Note: I also searched through nestegg.c to find other occurrences of this - it looks like the last one.
Attachment #706143 - Flags: review?(kinetik)
Attachment #706143 - Flags: review?(kinetik) → review+
Status: ASSIGNED → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla21
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: