Bug 834496 - Use ne_map_track_number_to_index in nestegg_track_seek r=kinetik